Kubernetes/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer-d
  template:
    metadata:
      labels:
        app: adminer-d
    spec:
      containers:
      - name: adminer-p
        image: dmarta14/adminer:latest
        ports:
        - containerPort: 8080
