Kubernetes/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: ClusterIP
  selector:
    app: adminer-d
  ports:
  - port: 80
    targetPort: 8080
