Kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: db-mysql-d
  ports:
  - port: 3306
    targetPort: 3306
