Kubernetes/web-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-php
spec:
  type: ClusterIP
  selector:
    app: web-php-d
  ports:
  - port: 80
    targetPort: 80
